# daisyseed-guitar-pedals

./: .gitmodules  PEDAL_IDEAS.md  README.md
autowah/: sax_autowah_prototype.maxpat
basic_looper/: Makefile  debounce.h  main.cpp
basic_reverb/: README.md  main.cpp
distortion/: AREnvelope.h  EnvelopeDetector.h  Makefile  main.cpp
utils/: .gitignore  AREnvelope.h  AREnvelope_unittests.cc  CMakeLists.txt  EnvelopeDetector.h  NoiseGate.h  NoiseGate_unittests.cc  README.md
utils/samples/: noise_test.raw
